...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appfood_by_tinnguyen2421.Chef.ChefActivity.ChefUpdateDish">

    <ImageButton
        android:id="@+id/imageupload"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/camerabtnshape"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
...
